--- a/styles/comprehension.css
+++ b/styles/comprehension.css
@@ -1,4 +1,4 @@
-/ General styles - put these straight into your stylesheet /
+/* General styles - put these straight into your stylesheet */
 
 body {
   margin: 0;
